2009-02-17  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp: Updated copyright year.	
	* ports/hotspot/src/os_cpu/linux_zero/vm/orderAccess_linux_zero.inline.hpp:
	Likewise.
	* ports/hotspot/src/os_cpu/linux_zero/vm/thread_linux_zero.hpp:
	Likewise.
	* ports/hotspot/src/share/vm/includeDB_shark
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBytecodeTracer.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkEntry.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp: Likewise.
	* ports/hotspot/src/share/vm/shark/sharkFunction.hpp: Likewise.
	* ports/hotspot/src/share/vm/shark/shark_globals.hpp: Likewise.

	* ports/hotspot/src/cpu/zero/vm/bytecodes_zero.hpp:
	Deleted contents (was all comment).

2009-02-15  Mark Wielaard  <mark@klomp.org>

	* patches/hotspot/default/14.0b08/*: Moved to ...
	patches/hotspot/default/*.

2009-02-12  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Revert Rhino change so IcedTea6 builds
	on Gentoo again.
	
2009-02-12  Andrew John Hughes  <ahughes@redhat.com>

	* patches/ecj/icedtea-hotspot-14.0b08.patch,
	* patches/hotspot/14.0b08/icedtea-6791168.patch,
	* patches/hotspot/14.0b08/icedtea-bytecodeInterpreter.patch,
	* patches/hotspot/14.0b08/icedtea-core-build.patch,
	* patches/hotspot/14.0b08/icedtea-debuginfo.patch,
	* patches/hotspot/14.0b08/icedtea-format.patch,
	* patches/hotspot/14.0b08/icedtea-gcc-4.3.patch,
	* patches/hotspot/14.0b08/icedtea-gcc-suffix.patch,
	* patches/hotspot/14.0b08/icedtea-headers.patch,
	* patches/hotspot/14.0b08/icedtea-includedb.patch,
	* patches/hotspot/14.0b08/icedtea-memory-limits.patch,
	* patches/hotspot/14.0b08/icedtea-no-precompiled.patch,